k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syntra
  namespace: syntra
  labels:
    app: syntra
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: syntra
